Add security config for system properties resource
Introduces SystemPropertiesSecurityConfig and SensitiveDataFilter for fine-grained control over access to system properties and environment variables. SystemPropertiesResource now defaults to restrictive production settings, with explicit configuration for development, production, or testing environments. Security features include allowlist/denylist, sensitive keyword filtering, audit logging, and environment detection. Updates example usage and tests to demonstrate new security model.